Add too many things. Bad version control habits Jordan... bad!

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,7 +5,19 @@
         <p>Site by <a href="mailto:WattJordanAlex@gmail.com">Jordan Watt</a></p>
     </span>
     <div style="display: flex; align-items: center;">
+        <form action="https://www.paypal.com/donate" method="post" target="_top">
+            <input type="hidden" name="business" value="5FGGMENPSR3LU" />
+            <input type="hidden" name="no_recurring" value="0" />
+            <input type="hidden" name="item_name"
+                value="Donations and payments are put toward more content like book materials, a monster manual, character sheets, and more!" />
+            <input type="hidden" name="currency_code" value="USD" />
+            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0"
+                name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+            <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+        </form>
         <div class="social">
+            <div id="paypal-donate-button-container">
+            </div>
             <a mat-icon-button color="primary" target="_blank" href="https://discord.gg/UnEKqTx">
                 <i class="fa-brands fa-discord"></i>
             </a>
