--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -9,7 +9,8 @@
                 <img src="assets/images/artwork/SoulsD20 Cover FINAL 72dpi.png">
                 <img src="assets/images/artwork/Weapons_Page1.png">
                 <span>
-                    <h3>A full-system table top roll playing experience</h3>
+                    <h3>A full-system table top <span matTooltip="Get it? ROLL-playing!" style="margin: 0;">roll</span>
+                        playing experience</h3>
                     <p>A comprehensive and rules heavy system, that can be picked up easily by beginners and experienced
                         players alike.</p>
                     <a mat-raised-button color="primary" routerLink="/info">Preview Available</a>
@@ -23,7 +24,7 @@
                 <img src="assets/images/artwork/Shield F WEB.png">
                 <span>
                     <h3>A combat style which encourages learning and countering adversaries</h3>
-                    <p>like the games it is inspired by, Souls d20 encourages gameplay where players learn the behavior
+                    <p>Like the games it is inspired by, Souls d20 encourages gameplay where players learn the behavior
                         of adversaries over the course of fights in order to dodge out of the way of attacks and counter
                         with their own attacks and skills.</p>
                     <a mat-raised-button color="primary" routerLink="/info">More Info</a>
@@ -47,12 +48,13 @@
         </mat-tab>
     </mat-tab-group>
 
-<div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
-    <h2>Start your adventure now, and play in a living world five years in the making.</h2>
-    <p style="max-width: 500px;">Play in a team, alongside multiple other teams of players and game masters, where your actions change
-        the world and their experiences.</p>
-    <a mat-raised-button color="primary" routerLink="/play">Play</a>
-</div>
-    
+    <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
+        <h2>Start your adventure now, and play in a living world five years in the making.</h2>
+        <p style="max-width: 500px;">Play in a team, alongside multiple other teams of players and game masters, where
+            your actions change
+            the world and their experiences.</p>
+        <a mat-raised-button color="primary" routerLink="/play">Play</a>
+    </div>
+
 
 </div>
