--- a/src/app/more-info/more-info.component.html
+++ b/src/app/more-info/more-info.component.html
@@ -1,6 +1,7 @@
 <div class="title">
     <h1>
-        Souls D20 is a full-system table top roll playing experience inspired by the Elden Ring and Soulsborne games.
+        Souls D20 is a full-system table top <span matTooltip="Get it? ROLL-playing!" style="margin: 0;">roll</span>
+        playing experience inspired by the Elden Ring and Soulsborne games.
     </h1>
     <p>
         With strategic combat and highly customizable character builds, Souls D20 can be played in person or
@@ -22,14 +23,14 @@
 
 
 
-            <h3>The full book includes over 170 pages of resources, such as spells lists, equipment
+            <h3>The full book includes over 190 pages of resources, such as spells lists, equipment
                 and weapons lists, skill and ability trees, quick guides for leveling and building a character!</h3>
         </div>
         <a class="preview-cover" href="/assets/download/preview/Souls_D20_Rules_3.0.2_Preview.pdf" download>
             <img src="assets/images/artwork/SoulsD20 Cover FINAL 72dpi.png">
         </a>
     </div>
-    <div style="display: flex; flex-direction: column; align-items: center; margin-bottom: 60px;">
+    <div style="display: flex; flex-direction: column; align-items: center; margin-bottom: 160px;">
         <div class="book-preview">
             <div class="preview">
                 <div id="previewPage1"></div>
@@ -53,7 +54,7 @@
         </div>
     </div>
 
-    <div style="position: static; margin-bottom: 500px;">
+    <div style="position: static; margin-bottom: 600px;">
         <div class="section">
             <div class="section-content">
                 <div class="section-blurbs">
@@ -61,11 +62,10 @@
                         the Daggers tree to do more damage from behind, will be able to take advantage of that ability
                         even when they are wielding a weapon other than a dagger!
                     </p>
-                    <p>Go down the Fist and Reaper tree to create a monk like character which deals extra bleed status
-                        effect build up in exchange for draining their own blood. Or a martial artist that defends their
-                        teammates while draining their enemies.
-                    </p>
-                    <p>Try out a tanky gunslinger that defends with a shield while taking precise shots with a gun.
+                    <p>Choose from a list of dozens of feats of destiny, which unlike weapon feats, can be invested into
+                        at any level by any character! Feats of destiny include the ability to become truly undead and
+                        take permanent injuries instead of dying, being able to speak new languages and communicate with
+                        any monster, and have a magical familiar which is bound and controlled by you.
                     </p>
                 </div>
 
@@ -74,7 +74,26 @@
         </div>
     </div>
 
-    <div style="display: flex; flex-direction: column; align-items: center; margin-bottom: 100px;">
+    <div style="position: static; margin-bottom: 600px;">
+        <div class="section">
+            <div class="section-content">
+                <img src="assets/images/artwork/Shield F WEB.png">
+                <div class="section-blurbs">
+                    <p>Combine Hammers and Miracles to make a character that wields cold blue lightning to freeze their
+                        enemies and smash them into the ground!
+                    </p>
+                    <p>Go down the Fist and Reaper tree to create a monk like character which deals extra bleed status
+                        effect build up in exchange for draining their own blood. Or a martial artist that defends their
+                        teammates while draining their enemies.
+                    </p>
+                    <p>Try out a tanky gunslinger that defends with a shield while taking precise shots with a gun.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div style="display: flex; flex-direction: column; align-items: center; margin-bottom: 160px;">
         <div class="book-preview">
             <div class="preview">
                 <div id="previewPage2"></div>
@@ -98,23 +117,26 @@
         </div>
     </div>
 
-    <div style="position: static; margin-bottom: 500px;">
+    <div style="position: static; margin-bottom: 600px;">
         <div class="section">
             <div class="section-content">
                 <img src="assets/images/artwork/Hex F WEB.png">
                 <div class="section-blurbs">
-                    <p>Combine Hammers and Miracles to make a character that wields cold blue lightning to freeze their
-                        enemies and smash them into the ground!
+                    <p>Conjure the Hexes of death to explode corpses and create toxic fogs over the battlefield.
                     </p>
-                    <p>Build a dragon pyromancer that can burn others with just their gaze, and from the sorcery tree,
-                        gaze into their minds with just a touch.
+                    <p>Use force miracles to push enemies and allies around into more advantageous positions.
                     </p>
+                    <p>Cover yourself in a veil of transparency and summon magic daggers to stab creatures in the back
+                        with assassin sorcery spells.
+                    </p>
+                    <p>Capture the spirits of monsters you fight in battle, summoning them back to perform a wide
+                        variety of spirit abilities!</p>
                 </div>
             </div>
         </div>
     </div>
 
-    <div style="display: flex; flex-direction: column; align-items: center; margin-bottom: 100px;">
+    <div style="display: flex; flex-direction: column; align-items: center; margin-bottom: 160px;">
         <div class="book-preview">
             <div class="preview">
                 <div id="previewPage3"></div>
@@ -131,13 +153,14 @@
                 </li>
             </ul>
             <h3>Master Weapon Skills!</h3>
-            <p>Dont let spellcasters have all the fun! Learn and take advantage of dozens of weapon skills which you can
+            <p>Don't let spellcasters have all the fun! Learn and take advantage of an array of weapon skills which you
+                can
                 mix and match to use with a wide variety of weapons.
             </p>
         </div>
     </div>
 
-    <div style="position: static; margin-bottom: 500px;">
+    <div style="position: static; margin-bottom: 300px;">
         <div class="section">
             <div class="section-content">
                 <div class="section-blurbs">
