--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -38,7 +38,7 @@ nav a {
 .nav-link:hover,
 .nav-link.active {
     border-bottom: 1.5px solid var(--gold);
-    background-image: linear-gradient(45deg, #cb8c34, #cf7030, #cf7030);
+    background-image: linear-gradient(45deg, #cb8c34, #cb8c34, #cf7030);
 }
 
 #mainLogo {
