--- a/src/app/play-info/play-info.component.css
+++ b/src/app/play-info/play-info.component.css
@@ -32,6 +32,30 @@ p {
     color: var(--white);
 }
 
+.section-left {
+    position: relative;
+    left: -100px;
+    margin-bottom: 60px;
+    padding: 20px 20px 20px 100px;
+    border-top: 1.5px solid #b99449;
+    border-right: 1.5px solid #b99449;
+    border-bottom: 1.5px solid #b99449;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+    background-color: #86452f;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+@media only screen and (min-width: 992px) {
+    .section-left {
+        width: 35%;
+        z-index: -1;
+        position: absolute;
+        left: 0;
+    }
+}
+
 .campaign {
     display: flex;
     flex-direction: column;
@@ -48,7 +72,7 @@ p {
 
 .campaign img {
     width: 320px;
-    height: 320px;
+    height: 293px;
     border: 1.5px solid #b99449;
     border-radius: 3px;
 }
@@ -64,6 +88,32 @@ p {
 
 mat-tab-group {
     margin: 30px auto 100px auto;
+}
+
+.testimonial-play {
+    margin: 0 0 0 auto;
+    max-width: 500px;
+}
+
+.testimonial-section {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.testimonial-container {
+    display: flex;
+    flex-direction: column;
+    margin-right: auto;
+    margin-left: auto;
+    
+}
+
+@media only screen and (min-width: 992px) {
+    .testimonial-container {
+        padding-left: 382px;
+        max-width: 500px;
+    }
 }
 
 .testimonial {
@@ -114,6 +164,7 @@ mat-tab-group {
     display: inline-block;
     margin: 0 0 20px 0;
     line-height: 40px;
+    font-size: 1.3rem;
 }
 
 .testimonial-name {
@@ -121,5 +172,5 @@ mat-tab-group {
     font-style: italic;
     margin: 0 0 20px 0;
     color: #9e9e9e;
-    font-size: 1.3rem;
+    font-size: 1rem;
 }
