--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@
     font-family: "EBGaramond";
     src: url("/assets/fonts/EBGaramond-SemiBold.ttf");
     src: url("/assets/fonts/ebgaramond-semibold-webfont.woff2") format("woff2"),
+        url("https://j-watt.github.io/souls-d20/assets/fonts/ebgaramond-semibold-webfont.woff2") format("woff2"),
         url("/assets/fonts/ebgaramond-semibold-webfont.woff") format("woff");
 }
 
@@ -26,7 +27,7 @@ body {
 
 body {
     margin: 0;
-    font-family: EBGaramond, Imperial-BT, Roboto, "Helvetica Neue", sans-serif;
+    font-family: EBGaramond, Mantinia;
     background-image: linear-gradient(to right, #102027, var(--black));
     background-repeat: repeat-y;
 }
