Fix play now z-index, footer modal, preview update

--- a/src/app/footer/bottom-sheet-footer.html
+++ b/src/app/footer/bottom-sheet-footer.html
@@ -5,5 +5,7 @@
                 [href]="'https://www.kevinbannister.com/'">https://www.kevinbannister.com/</a></li>
         <li style="margin: 10px;">ArtStation: <a target="_blank"
                 [href]="'https://kfbannister.artstation.com/'">https://kfbannister.artstation.com/</a></li>
+        <li style="margin: 10px;">Instagram: <a target="_blank"
+                [href]="'https://www.instagram.com/artofbannister/'">https://www.instagram.com/artofbannister/</a></li>
     </ul>
 </div>
