Refactor document formatting and removed unecessary comments

--- a/src/app/play-info/play-info.component.html
+++ b/src/app/play-info/play-info.component.html
@@ -48,16 +48,12 @@
                 <span>
                     <h3>Tales of the Tomb Prospectors (short campaign)</h3>
                     <p>East of the kingdom of Yhelcain stands the beautiful city of Alvina. Trapped in perpetual autumn
-                        and
-                        built into the massive golden leaved trees. Alvina is home to a guild of adventurers tasked with
-                        delving deep into the southern ruins of Lethrell, which fell generations ago to unspeakable
+                        and built into the massive golden leaved trees. Alvina is home to a guild of adventurers tasked
+                        with delving deep into the southern ruins of Lethrell, which fell generations ago to unspeakable
                         horrors. The ruins of Lethrell are home to powerful artifacts and magic items, some of which are
-                        to
-                        powerful
-                        to pass up or too dangerous to leave in the hands of others. Take your group of Tomb Prospector
-                        initiates and delve into the catacombs and dungeons of the ruins, and either come back rich with
-                        a
-                        haul of twisted treasures, or be driven mad at what you witness below.</p>
+                        to powerful to pass up or too dangerous to leave in the hands of others. Take your group of Tomb
+                        Prospector initiates and delve into the catacombs and dungeons of the ruins, and either come
+                        back rich with a haul of twisted treasures, or be driven mad at what you witness below.</p>
                 </span>
 
             </div>
@@ -69,17 +65,15 @@
                     <h3>The last Privateers of Erume (short campaign)</h3>
                     <p>For the last decade or so, the great western ocean of Sarda Cen has been off limits to almost all
                         travel. Entire fleets of ships go missing, with not even a single surviving soul to tell the
-                        tale of
-                        what happened. But amidst the chaos of war with the north, one last ship has been secretly
-                        commissioned to embark from the port of the golden capitol of the empire of Erume. Crewed with
+                        tale of what happened. But amidst the chaos of war with the north, one last ship has been
+                        secretly commissioned to embark from the port of the golden capitol of the empire of Erume.
+                        Crewed with
                         mercenaries and sailors that are mad enough for the journey, and tasked with discovering any
-                        glimpse
-                        of hope for reopening the waters or turning the tide of war, the last ship must sail on cursed
-                        waters and search for answers. Being part of this ship your group must stick together and brave
-                        the
-                        anomalous and mind melting journey with only each other, and those aboard that remain sane
-                        enough to
-                        rely on.</p>
+                        glimpse of hope for reopening the waters or turning the tide of war, the last ship must sail on
+                        cursed waters and search for answers. Being part of this ship your group must stick together and
+                        brave
+                        the anomalous and mind melting journey with only each other, and those aboard that remain sane
+                        enough to rely on.</p>
                 </span>
 
             </div>
