--- a/src/app/more-info/more-info.component.html
+++ b/src/app/more-info/more-info.component.html
@@ -15,14 +15,14 @@
             <p>Take a peak inside the system with the available preview!
                 Souls D20 is regularly updated and playtested. To get the latest, full version please checkout
                 our discord and get in <a routerLink="/contact">contact!</a></p>
-            <a mat-raised-button color="primary" href="/assets/download/preview/Souls_D20_Rules_3.1.0_Preview.pdf"
+            <a mat-raised-button color="primary" href="https://j-watt.github.io/souls-d20/assets/download/preview/Souls_D20_Rules_3.1.0_Preview.pdf"
                 download>Download Preview</a>
 
             <h3>The full book includes over 190 pages of resources, such as spells lists, equipment
                 and weapons lists, skill and ability trees, quick guides for leveling and building a character!</h3>
         </div>
-        <a class="preview-cover" href="/assets/download/preview/Souls_D20_Rules_3.1.0_Preview.pdf" download>
-            <img src="assets/images/artwork/SoulsD20 Cover FINAL 72dpi.png">
+        <a class="preview-cover" href="https://j-watt.github.io/souls-d20/assets/download/preview/Souls_D20_Rules_3.1.0_Preview.pdf" download>
+            <img src="https://j-watt.github.io/souls-d20/assets/images/artwork/SoulsD20 Cover FINAL 72dpi.png">
         </a>
     </div>
     <div style="display: flex; flex-direction: column; align-items: center; margin-bottom: 160px;">
