--- a/src/app/play-info/play-info.component.css
+++ b/src/app/play-info/play-info.component.css
@@ -103,14 +103,10 @@ mat-tab-group {
 .testimonial-container {
     display: flex;
     flex-direction: column;
-    margin-right: auto;
-    margin-left: auto;
-
 }
 
 @media only screen and (min-width: 992px) {
     .testimonial-container {
-        padding-left: 382px;
         max-width: 500px;
     }
 }
@@ -172,4 +168,21 @@ mat-tab-group {
     margin: 0 0 20px 0;
     color: #9e9e9e;
     font-size: 1rem;
+}
+
+.testimonials-signup {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.signup-form {
+    position: relative;
+    top: 450px;
+    margin: 0 60px 320px 0;
+}
+
+.signup-form iframe {
+    height: 1660px;
 }
