Move testimonials to also be in support

--- a/src/app/more-info/more-info.component.html
+++ b/src/app/more-info/more-info.component.html
@@ -5,16 +5,16 @@
     </h1>
     <p>
         With strategic combat and highly customizable character builds, Souls D20 can be played in person or
-        online using the Handbook for a complete ruleset as well as resources!
+        online using the Handbook for a complete ruleset as well as resources.
     </p>
 </div>
 <div class="content">
     <div class="preview-download">
         <div>
             <h2>Check out the system preview!</h2>
-            <p>Take a peak inside the system with the available preview!
+            <p>Take a peak inside the system with the available preview.
                 Souls D20 is regularly updated and playtested. To get the latest, full version please checkout
-                our discord and get in <a routerLink="/contact">contact!</a></p>
+                our discord and get in <a routerLink="/contact">contact.</a></p>
             <a mat-raised-button color="primary" href="https://j-watt.github.io/souls-d20/assets/download/preview/Souls_D20_Rules_3.1.0_Preview.pdf"
                 download>Download Preview</a>
 
@@ -41,11 +41,11 @@
                     <div></div>
                 </li>
             </ul>
-            <h3>Customized Builds!</h3>
+            <h3>Customized Builds</h3>
             <p>21 unique trees to mix and match abilities and synergies from! <br><br>
                 As you gain experience through adventuring your character will gain points to invest into multiple
                 ability trees at once. Mix and match abilities from different trees to create a unique character and
-                build!</p>
+                build.</p>
         </div>
     </div>
 
@@ -55,10 +55,10 @@
                 <div class="section-blurbs">
                     <p>Most abilities are usable with most weapon types! For example, a character that has invested into
                         the Daggers tree to do more damage from behind, will be able to take advantage of that ability
-                        even when they are wielding a weapon other than a dagger!
+                        even when they are wielding a weapon other than a dagger.
                     </p>
                     <p>Choose from a list of dozens of feats of destiny, which unlike weapon feats, can be invested into
-                        at any level by any character! Feats of destiny include the ability to become truly undead and
+                        at any level by any character. Feats of destiny include the ability to become truly undead and
                         take permanent injuries instead of dying, being able to speak new languages and communicate with
                         any monster, and have a magical familiar which is bound and controlled by you.
                     </p>
@@ -104,10 +104,10 @@
                     <div></div>
                 </li>
             </ul>
-            <h3>Wide Range Of Spells!</h3>
+            <h3>Wide Range Of Spells</h3>
             <p>Explore multiple categories of magic and spellcasting to build a caster or spellblade of your own!
                 Sorceries, Miracles, Pyromancy, Hexes, and even Spirit Summoning. Each with multiple sub categories and
-                ability trees to progress down!
+                ability trees to progress down.
             </p>
         </div>
     </div>
@@ -125,7 +125,7 @@
                         with assassin sorcery spells.
                     </p>
                     <p>Capture the spirits of monsters you fight in battle, summoning them back to perform a wide
-                        variety of spirit abilities!</p>
+                        variety of spirit abilities.</p>
                 </div>
             </div>
         </div>
@@ -147,7 +147,7 @@
                     <div></div>
                 </li>
             </ul>
-            <h3>Master Weapon Skills!</h3>
+            <h3>Master Weapon Skills</h3>
             <p>Don't let spellcasters have all the fun! Learn and take advantage of an array of weapon skills which you
                 can
                 mix and match to use with a wide variety of weapons.
@@ -164,7 +164,7 @@
                         attack an unreachable target. Just to name a few!
                     </p>
                     <p>Augment your attacks with area of effect to more easily hit multiple targets. Even inspire and
-                        buff your allies with weapon skills!
+                        buff your allies with weapon skills.
                     </p>
                 </div>
 
