--- a/src/app/play-info/play-info.component.html
+++ b/src/app/play-info/play-info.component.html
@@ -92,7 +92,7 @@
                     help
                     us organize a campaign for you:</p>
                 <ul style="color: var(--white);">
-                    <li>Group size, bring friends or join solo!</li>
+                    <li>Group size, bring friends or join solo</li>
                     <li>Type of campaign</li>
                     <li>Time commitment & preferred campaign length</li>
                 </ul>
