--- a/src/app/support/support.component.css
+++ b/src/app/support/support.component.css
@@ -64,3 +64,75 @@
     border-radius: 3px;
     margin: 0 60px;
 }
+
+
+.testimonial-container {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+}
+
+@media only screen and (min-width: 992px) {
+    .testimonial-container {
+        max-width: 500px;
+    }
+}
+
+.testimonial {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.testimonial-icon::before {
+    content: "";
+    width: 100px;
+    height: 100px;
+    background-image: radial-gradient(white 40%, transparent 50%);
+}
+
+.testimonial-icon {
+    width: 100px;
+    height: 100px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: inline-block;
+    z-index: 1;
+}
+
+.testimonial span {
+    width: 100px;
+    height: 100px;
+    display: inline-block;
+    background-image: radial-gradient(#444444 10%, transparent 70%);
+    position: relative;
+    bottom: 100px;
+    z-index: 0;
+}
+
+.testimonial-quote::before {
+    content: open-quote;
+    font-size: 2.5rem;
+    color: var(--gold);
+}
+
+.testimonial-quote::after {
+    content: close-quote;
+    font-size: 2.5rem;
+    color: var(--gold);
+}
+
+.testimonial-quote {
+    display: inline-block;
+    margin: 0 0 20px 0;
+    line-height: 40px;
+    font-size: 1.3rem;
+}
+
+.testimonial-name {
+    display: inline-block;
+    font-style: italic;
+    margin: 0 0 20px 0;
+    color: #9e9e9e;
+    font-size: 1rem;
+}
