Change wording in some copy

--- a/src/app/more-info/more-info.component.html
+++ b/src/app/more-info/more-info.component.html
@@ -159,12 +159,12 @@
         <div class="section">
             <div class="section-content">
                 <div class="section-blurbs">
+                    <p>Augment your attacks with area of effect to more easily hit multiple targets. Inspire and
+                        buff your allies with weapon skills.
+                    </p>
                     <p>Feel the power and utility of creating blades of air when you attack, pulling in enemies with the
                         power of gravity, vaulting through the air to close gaps, and summoning a phantom of yourself to
-                        attack an unreachable target. Just to name a few!
-                    </p>
-                    <p>Augment your attacks with area of effect to more easily hit multiple targets. Even inspire and
-                        buff your allies with weapon skills.
+                        attack an unreachable target. These are just a few of the skills to discover!
                     </p>
                 </div>
 
